Handle deprecation of `URL` constructor in Java 21
Signed-off-by: nscuro <nscuro@protonmail.com>